mash: Avoid shelf crashes on display removal.

Make ShelfWidget CloseNow in Shutdown.
Call ShutdownShelfWidget() in the WmShelfMus dtor.
Check for a valid shelf window in UpdateVisibilityState.

BUG=641463
TEST='chrome --mash --multi-display' doesn't crash when closing the second display.
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2302673002
Cr-Commit-Position: refs/heads/master@{#416747}

Former-commit-id: 709f84d2f2bac43662b31b9393812c8a711f6da0